--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     
 </style></head>
 <body style="background-image: linear-gradient(to bottom right,#405DE6,#5B51D8,#833AB4,#C13584,#E1306C,#FD1D1D,#FCAF45);">
-   <center><img width=250px src="gdglogo.png"><img src="innolitlogo.png"><h1 style="font-size: 100px;color:white;">Like And Lit Innolit Ignite 1.0</h1>
+   <center><img width=250px src="gdglogo.png"><img height=250px  width=250px src="innolitlogo.png"><h1 style="font-size: 100px;color:white;">Like And Lit Innolit Ignite 1.0</h1>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfttAEDi23OGMDYXCaT5PwgNT1CMxJIE8AM8nmPaTchk6aK6Q/viewform?embedded=true" width="500" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe><br>
     <iframe height="600px" width="600px" src="https://www.instagram.com/gdgoenkarohini22/embed/" style="border-radius: 30px;"></iframe>
 <iframe height="600px" width="600px" src="https://www.instagram.com/likeandlitteam1/embed/" style="border-radius: 30px;margin-left: 100px;"></iframe><br><br><br>
