--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ document.onkeydown = (e) => {
     (e.ctrlKey && e.keyCode === 'U'.charCodeAt(0))
   )
     return false;
+    window.alert("Developer Tools Are Disabled On This Page");
 };
 </script>
 
